# FlexivRizonRedisDriver

./: .gitignore  README.md
redis_driver/: CMakeLists.txt  CMakePresets.json  SaiFlexivDriverConfig.h  SaiFlexivRedisClientLocal.h  driver_robot_only.cpp  driver_robot_only_NOT_UPDATED.cpp  driver_with_flexiv_gripper.cpp  launch_GN01-gripper_oberon-4s_driver.sh  launch_beatrice-4s_gripper_driver.sh  launch_claudio-4s_gripper_driver.sh  launch_oberon-4s_driver.sh  launch_oberon-4s_gripper_driver.sh  launch_titania-4_driver.sh  launch_titania-4s_gripper_driver.sh
redis_driver/config_folder/: config_beatrice.xml  config_claudio.xml  config_oberon.xml  config_titania.xml
